@@ -8,6 +8,28 @@ A Java term project containing three playable games launched from one main menu:
 
 The project was built for BCIT COMP 2522 and uses object-oriented Java design with separate packages for each game mode.
 
+## Demo Video
+
+Watch the project demo on YouTube:
+
+[3 Games Java Project Demo](https://youtu.be/1Iwzg2HyQlw)
+
+## Screenshots
+
+### Letter Rush Title Screen
+
+![Letter Rush title screen](3%20Games/Resources/images/Letter-Rush-Title.png)
+
+### Letter Rush Gameplay
+
+![Letter Rush gameplay screen 1](3%20Games/Resources/images/Letter-Rush.png)
+
+![Letter Rush gameplay screen 2](3%20Games/Resources/images/Letter-Rush-2.png)
+
+### Number Game Demo
+
+![Number Game demo](3%20Games/Resources/images/Number-Game.png)
+
 ## Features
 
 ### Main Menu
@@ -70,22 +92,25 @@ The project was built for BCIT COMP 2522 and uses object-oriented Java design wi
 
 ## How to Run
 
+### Run in IntelliJ IDEA
+
 1. Open the project in IntelliJ IDEA.
 2. Make sure the project SDK is set to Java 23.
 3. Add JavaFX to the project if your JDK does not bundle it.
-4. Set the working directory to:
+4. Open the run configuration for the main class.
+5. Set the working directory to:
 
 ```text
 3 Games
 ```
 
-5. Run the main class:
+6. Run the main class:
 
 ```text
 ca.bcit.comp2522.termproject.wordgame.Main
 ```
 
-6. Use the console menu:
+7. Use the console menu:
 
 ```text
 W - Word Game
@@ -94,12 +119,30 @@ M - Letter Rush
 Q - Quit
 ```
 
+### JavaFX VM Options
+
+If JavaFX is installed separately, add VM options similar to this in IntelliJ:
+
+```text
+--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+```
+
+Replace `/path/to/javafx-sdk/lib` with the actual path to your JavaFX `lib` folder.
+
+### Running Each Game
+
+- To play **Word Game**, run `Main` and enter `W` in the console.
+- To play **Number Game**, run `Main` and enter `N` in the console.
+- To play **Letter Rush**, run `Main` and enter `M` in the console.
+- To quit the program, enter `Q` in the console.
+
 ## Resources
 
 The games depend on files in the `Resources` directory:
 
 - `Resources/wordgame/textfiles/` contains country and score data.
 - `Resources/numbergame/css/` contains Number Game styling.
+- `Resources/images/` contains README/demo screenshots.
 - `Resources/letterrush/txtfiles/` contains words, prompts, applications, and high-score data.
 - `Resources/letterrush/images/` contains Letter Rush backgrounds and obstacle sprites.
 - `Resources/letterrush/css/` contains Letter Rush styling.
